# abzu-headtracking

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Directory.Build.props  HeadTracking.ini  README.md  THIRD-PARTY-NOTICES.md  launcher-manifest.json  pixi.toml
.github/workflows/: build.yml  release.yml
include/ueht/: Config.hpp  Version.hpp
scripts/: deploy.ps1  install.cmd  package-release.ps1  release-nightly.ps1  release.ps1  uninstall.cmd  update-deps.ps1
scripts/ghidra/: FindCameraOffsets.py  decompile_functions.py  dump_pcm_vtable.py  find_camera_hook_targets.py  find_controlrotation_writers.py  find_offsets.py  find_pcm_vtable.py  find_struct_copy.py  find_updatecamera.py  find_updatecamera_v2.py  find_updatecamera_via_caller.py  hunt_updatecamera.py  pin_updatecamera.py  scan_real_pcm_vtable.py  trace_callers.py
src/AbzuHeadTracking/: CMakeLists.txt  Config.cpp  DllMain.cpp  Framework.cpp  Framework.hpp  Mod.hpp  Mods.cpp  Mods.hpp
src/AbzuHeadTracking/hooks/: D3D11Hook.cpp  D3D11Hook.hpp  D3D12Hook.cpp  D3D12Hook.hpp
src/AbzuHeadTracking/mods/: HeadTracking.cpp  HeadTracking.hpp  UEEngine.cpp  UEEngine.hpp  UnrealCamera.cpp  UnrealCamera.hpp
src/AbzuHeadTracking/utility/: Logging.cpp  Logging.hpp  SafeMemory.hpp  Scan.cpp  Scan.hpp
tests/: gengine_scan_bench.cpp  logging_format_test.cpp  timestamp_format_test.cpp
